--- a/mySimpleComputer/Makefile
+++ b/mySimpleComputer/Makefile
@@ -1,10 +1,7 @@
 CC = gcc
 CFLAGS = -g -Wall
 
-SRCS = sc_regSet.c sc_regInit.c sc_regGet.c \
-       sc_memorySet.c sc_memorySave.c sc_memoryLoad.c \
-       sc_memoryInit.c sc_memoryGet.c sc_commandEncode.c \
-       sc_commandDecode.c values.c
+SRCS = sc_regSet.c sc_regInit.c sc_regGet.c sc_memorySet.c sc_memorySave.c sc_memoryLoad.c sc_memoryInit.c sc_memoryGet.c sc_commandEncode.c sc_commandDecode.c values.c
 
 OBJS = $(SRCS:.c=.o)
 
