--- a/myReadkey/Makefile
+++ b/myReadkey/Makefile
@@ -1,11 +1,11 @@
 CC = gcc
 CFLAGS = -g -Wall -I../include
 
-SRCS = rk_mytermregime.c rk_mytermrestore.c rk_mytermsave.c rk_readkey.c
+SRCS = rk_mytermregime.c rk_mytermrestore.c rk_mytermsave.c rk_variables.c rk_readkey.c
 
 OBJS = $(SRCS:.c=.o)
 
-LIBRARY = myReadkey.a
+LIBRARY = libmyReadkey.a
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -17,3 +17,4 @@ $(LIBRARY): $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(LIBRARY)
+	rm -f *.o
