--- a/mySimpleComputer/Makefile
+++ b/mySimpleComputer/Makefile
@@ -1,11 +1,11 @@
 CC = gcc
 CFLAGS = -g -Wall -I../include
 
-SRCS = sc_regSet.c sc_regInit.c sc_regGet.c sc_memorySet.c sc_memorySave.c sc_memoryLoad.c sc_memoryInit.c sc_memoryGet.c sc_commandEncode.c sc_commandDecode.c variables.c
+SRCS = sc_regSet.c sc_regInit.c sc_regGet.c sc_memorySet.c sc_memorySave.c sc_memoryLoad.c sc_memoryInit.c sc_memoryGet.c sc_commandEncode.c sc_commandDecode.c sc_variables.c
 
 OBJS = $(SRCS:.c=.o)
 
-LIBRARY = mySimpleComputer.a
+LIBRARY = libmySimpleComputer.a
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -17,3 +17,4 @@ $(LIBRARY): $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(LIBRARY)
+	rm -f *.o
